RESOLVED FIXED 272965
[iOS] navigator.language returns the system language instead of the preferred language for the app
https://bugs.webkit.org/show_bug.cgi?id=272965
Summary [iOS] navigator.language returns the system language instead of the preferred...
Ryosuke Niwa
Reported 2024-04-19 02:02:23 PDT
In iOS 17.4 and later, navigator.language returns the system language instead of the preferred language for the app.
Attachments
Ryosuke Niwa
Comment 1 2024-04-19 02:02:36 PDT
Ryosuke Niwa
Comment 2 2024-04-19 02:08:58 PDT
EWS
Comment 3 2024-04-19 07:24:08 PDT
Committed 277733@main (4ce66f9fa313): <https://commits.webkit.org/277733@main> Reviewed commits have been landed. Closing PR #27504 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.