[iOS] navigator.language returns the system language instead of the preferred language for the app https://bugs.webkit.org/show_bug.cgi?id=272965 <rdar://126555755>

Reviewed by Per Arne Vollan and Chris Dumez.

The bug was caused by WebKit2 failing to set the language override in setAppleLanguagesPreference
because xpc_connection_set_bootstrap / xpc_copy_bootstrap no longer work in iOS 17.4 and later when
ExtensionKit is used. Specifically, the XPC connection we have with ExtensionKit is an anonymous
XPC connection, and not the XPC connection used to launch the XPC service.

Fixed the bug by attaching the language override to WebKit's "bootstrap" message.

* Source/WebKit/Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceMain.mm:
(WebKit::overrideLanguagesFromBootstrap): Added.
(WebKit::stageOverrideLanguagesForMainThread): Added.
(WebKit::setAppleLanguagesPreference):
(WebKit::XPCServiceEventHandler):

* Source/WebKit/UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm:
(WebKit::ProcessLauncher::finishLaunchingProcess):

* Tools/TestWebKitAPI/Tests/WebKit/OverrideAppleLanguagesPreference.mm:
(TEST(WebKit, OverrideAppleLanguagesPreferenceAffectsNavigatorLanguage)): Added.

Canonical link: https://commits.webkit.org/277733@main